# transwarp-service-insight

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  compose.fts-only.yaml  compose.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: Dockerfile  mvnw  pom.xml
docs/: DECISIONS.md  DEVELOPMENT.md  README.md  agent-design.md  architecture.md  demo-plan.md  demo-script.md  frontend-demo.html  frontend-demo.md  mock-knowledge.md  mvp-scope.md  progress.md  project-overview.md  requirements.md  review-notes.md  roadmap.md  task-breakdown.md  templates.md
frontend/: .prettierrc.json  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
local-embedding/: Dockerfile
prompts/: 2026-07-03-01-sla-precheck-demo-restructure.md  README.md  (+5 more)
tools/embedding-qualification/: .dockerignore  Dockerfile  README.md  THIRD_PARTY_NOTICE.md  allowlist.json  pyproject.toml  requirements.in  sbom.cdx.json
tools/embedding-qualification/evidence/: model.manifest  model.manifest.sha256  qualification-summary.json  results.sha256
tools/embedding-qualification/scripts/: run-qualification.ps1
tools/embedding-qualification/src/embedding_qualification/: __init__.py  benchmark.py  cli.py  fetch.py  manifest.py  metrics.py  model.py  provenance.py  qualification.py  retrieval.py
tools/embedding-qualification/tests/: test_benchmark.py  test_fetch.py  test_manifest.py  test_metrics.py  test_provenance.py  test_qualification.py  test_retrieval.py
(+416 files in other folders)
