[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transwarp-embedding-qualification"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = []

[project.scripts]
embedding-qualification = "embedding_qualification.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
